@@ -116,7 +116,7 @@ Poeple/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		AtlasSpriteManager#removeChild fixes
 		CocosNode#runAction doesn't run an already running action
 		Added improvements, fixes and documentation in CGPointExtension
-		Author of the TouchDispatcher/TouchHandler
+		Author of the TouchDispatcher/TouchHandler: handle each touch independently
 		CocosNode actions: patches that makes the actions run MUCH faster
 		Author of the transformations caches. world2local, local2world runs faster.
         fixes for Repeat action. It doesn't skip integer values
