@@ -51,12 +51,6 @@ enum {
 	return s;
 }
 
--(ccTouchEventType) typeOfEventsToHandle
-{
-//	return kTouchEventStandard;
-	return kTouchEventTargeted;
-}
-
 -(id) initWithItems: (MenuItem*) item vaList: (va_list) args
 {
 	if( (self=[super init]) ) {
@@ -92,7 +86,6 @@ enum {
 	//	[self alignItemsVertically];
 		
 		selectedItem = nil;
-//		state = kMenuStateWaiting;
 	}
 	
 	return self;
@@ -114,120 +107,73 @@ enum {
 	
 #pragma mark Menu - Events
 
-//- (BOOL)ccTouchesBegan:(NSSet *)touches withEvent:(UIEvent *)event
-//{
-//	UITouch *touch = [touches anyObject];	
-//	MenuItem *item = [self itemForTouch:touch];
-//	
-//	if( item ) {
-//		[item selected];
-//		selectedItem = item;
-//		return kEventHandled;
-//	}
-//	
-//	return kEventIgnored;
-//}
-//
-//- (BOOL)ccTouchesEnded:(NSSet *)touches withEvent:(UIEvent *)event
-//{
-//	UITouch *touch = [touches anyObject];	
-//	MenuItem *item = [self itemForTouch:touch];
-//	
-//	if( item ) {
-//		[item unselected];
-//		[item activate];
-//		return kEventHandled;
-//		
-//	} else if( selectedItem ) {
-//		[selectedItem unselected];
-//		selectedItem = nil;
-//		
-//		// don't return kEventHandled here, since we are not handling it!
-//	}
-//	return kEventIgnored;
-//}
-//
-//- (BOOL)ccTouchesMoved:(NSSet *)touches withEvent:(UIEvent *)event
-//{
-//	UITouch *touch = [touches anyObject];	
-//	MenuItem *item = [self itemForTouch:touch];
-//	
-//	// "mouse" draged inside a button
-//	if( item ) {
-//		if( item != selectedItem ) {
-//			if( selectedItem  )
-//				[selectedItem unselected];
-//			[item selected];
-//			selectedItem = item;
-//			return kEventHandled;
-//		}
-//		
-//		// "mouse" draged outside the selected button
-//	} else {
-//		if( selectedItem ) {
-//			[selectedItem unselected];
-//			selectedItem = nil;
-//			
-//			// don't return kEventHandled here, since we are not handling it!
-//		}
-//	}
-//	
-//	return kEventIgnored;
-//}
-
-//-(void) onEnter
-//{
-//	[[TouchDispatcher sharedDispatcher] addEventHandler:self priority:0 swallowTouches:NO];
-//	[super onEnter];
-//}
-//	
-//-(void) onExit
-//{
-//	[[TouchDispatcher sharedDispatcher] removeEventHandler:self];
-//	[super onExit];
-//}
-
--(BOOL) ccTouchBegan:(UITouch *)touch withEvent:(UIEvent *)event
+// The code to handle the menus is much more simpler and easy to understand
+// if is uses kTouchHandlerTargeted.
+// But integration between Targeted and Standard handler is not 100% compatible
+-(ccTouchHandlerType) typeOfTouchHandler
 {
-	if( state != kMenuStateWaiting ) return NO;
-	
-	selectedItem = [self itemForTouch:touch];
-	[selectedItem selected];
-	
-	state = kMenuStateTrackingTouch;
-	return YES;
+	return kTouchHandlerStandard;
 }
 
--(void) ccTouchEnded:(UITouch *)touch withEvent:(UIEvent *)event
+- (BOOL)ccTouchesBegan:(NSSet *)touches withEvent:(UIEvent *)event
 {
-	NSAssert(state == kMenuStateTrackingTouch, @"[Menu ccTouchEnded] -- invalid state");
+	UITouch *touch = [touches anyObject];	
+	MenuItem *item = [self itemForTouch:touch];
 	
-	[selectedItem unselected];
-	[selectedItem activate];
-	
-	state = kMenuStateWaiting;
-}
-
--(void) ccTouchCancelled:(UITouch *)touch withEvent:(UIEvent *)event
-{
-	NSAssert(state == kMenuStateTrackingTouch, @"[Menu ccTouchCancelled] -- invalid state");
-	
-	[selectedItem unselected];
-	
-	state = kMenuStateWaiting;
-}
-
--(void) ccTouchMoved:(UITouch *)touch withEvent:(UIEvent *)event
-{
-	NSAssert(state == kMenuStateTrackingTouch, @"[Menu ccTouchMoved] -- invalid state");
-	
-	MenuItem *currentItem = [self itemForTouch:touch];
-	
-	if (currentItem != selectedItem) {
-		[selectedItem unselected];
-		selectedItem = currentItem;
-		[selectedItem selected];
+	if( item ) {
+		[item selected];
+		selectedItem = item;
+		return kEventHandled;
 	}
+	
+	return kEventIgnored;
+}
+
+- (BOOL)ccTouchesEnded:(NSSet *)touches withEvent:(UIEvent *)event
+{
+	UITouch *touch = [touches anyObject];	
+	MenuItem *item = [self itemForTouch:touch];
+	
+	if( item ) {
+		[item unselected];
+		[item activate];
+		return kEventHandled;
+		
+	} else if( selectedItem ) {
+		[selectedItem unselected];
+		selectedItem = nil;
+		
+		// don't return kEventHandled here, since we are not handling it!
+	}
+	return kEventIgnored;
+}
+
+- (BOOL)ccTouchesMoved:(NSSet *)touches withEvent:(UIEvent *)event
+{
+	UITouch *touch = [touches anyObject];	
+	MenuItem *item = [self itemForTouch:touch];
+	
+	// "mouse" draged inside a button
+	if( item ) {
+		if( item != selectedItem ) {
+			if( selectedItem  )
+				[selectedItem unselected];
+			[item selected];
+			selectedItem = item;
+			return kEventHandled;
+		}
+		
+		// "mouse" draged outside the selected button
+	} else {
+		if( selectedItem ) {
+			[selectedItem unselected];
+			selectedItem = nil;
+			
+			// don't return kEventHandled here, since we are not handling it!
+		}
+	}
+	
+	return kEventIgnored;
 }
 
 #pragma mark Menu - Alignment
