@@ -11,7 +11,6 @@ version 0.8 - xxx
  . CocosNode: transformation matrix is cached (issue #263)
  . CocosNode: faster transforming of local/world coordinates (issue #263)
  . CocosNode: anchorPoint is relative (0,0) to (1,1) (issue #303)
- . Demos: Added PerformanceParticleTest (issue #331)
  . Director: supports PortraitUpsideDown and Right orientation (issue #351)
  . LabelAtlas: don't render in subpixel (issue #135)
  . Menu: All MenuItems supports CocosNodeRGBA protocol (issue #347)
@@ -23,6 +22,8 @@ version 0.8 - xxx
  . Particles: added support for start/end/var spinning (issue #335)
  . Particles: support for World/Local coordinates (issue #241)
  . Primitives: added bezier path support (issue #380)
+ . Tests: Added PerformanceParticleTest (issue #331)
+ . Tests: Added TouchTest (issue #211, #402)
  . Texture2D: new alias/antialias API (issue #226)
  . Texture2D: supports 16-bit textures RGB4 and RGB5A1 (default is RGBA4444) (issue #356)
  . Texture2D: blending mode varies according to texture (issue #125)
